# Physical_AI_Humanoid_Robotics_Book

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_minimal.txt  test_api.py  test_face_api.js  test_vision_api.py  validate_project.py
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: data-model.md  impl-plan-template.md  quickstart.md  research.md
.specify/templates/contracts/: auth-api.yaml  content-api.yaml
docs/module-1/: intro.md
docs/module-2/: intro.md
docs/module-3/: intro.md
docs/module-4/: chapter-1-introduction-to-vla.md  chapter-2-voice-to-action.md  chapter-3-cognitive-planning.md  chapter-4-capstone-project.md  intro.md  voice-action-sequences.md
specs/001-ros2-humanoid-module/: spec.md
specs/002-gazebo-unity-digital-twin/: spec.md
specs/003-nvidia-isaac-ai-brain/: spec.md
specs/004-vision-language-action-vla/: plan.md  quickstart.md  spec.md  tasks.md
specs/005-docusaurus-ui-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/api/: main.py  main_safe.py
src/api/database/: database.py  init_db.py  (+2 more)
src/auth/: config.js
src/components/: ErrorBoundary.js  LayoutWrapper.jsx  RAGChatbot.css  RAGChatbot.jsx  VLAExercise.css  VLAExercise.jsx
src/contexts/: AuthContext.js  LanguageContext.js
src/css/: custom.css
src/pages/: index.js  index.mdx  login.js  profile.js  signup.js  vision.js
src/theme/: Layout.jsx  Root.js
src/utils/: authUtils.js
(+51 files in other folders)
